[package]
name = "aho-corasick"
version = "0.7.20"  #:version
authors = ["Andrew Gallant <jamslam@gmail.com>"]
description = "Fast multiple substring searching."
homepage = "https://github.com/BurntSushi/aho-corasick"
repository = "https://github.com/BurntSushi/aho-corasick"
readme = "README.md"
keywords = ["string", "search", "text", "aho", "multi"]
license = "Unlicense OR MIT"
categories = ["text-processing"]
autotests = false
exclude = ["/aho-corasick-debug"]
edition = "2018"

[workspace]
members = ["aho-corasick-debug", "bench"]

[lib]
name = "aho_corasick"

[features]
default = ["std"]
std = ["alloc", "memchr/std"]
alloc = []

[dependencies]
memchr = { version = "2.4.0", default-features = false }

[dev-dependencies]
doc-comment = "0.3.3"

[profile.release]
debug = true

[profile.bench]
debug = true
